feat(api): implement user management, security, and enhanced task crud