@@ -1,40 +1,173 @@
 package org.task.taskmaganer.service;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.task.taskmaganer.dto.request.CreateTaskRequest;
+import org.task.taskmaganer.dto.request.UpdateTaskRequest;
 import org.task.taskmaganer.dto.response.TaskResponse;
 import org.task.taskmaganer.entity.Task;
+import org.task.taskmaganer.entity.User;
+import org.task.taskmaganer.exception.ResourceNotFoundException;
 import org.task.taskmaganer.repository.TaskRepository;
+import org.task.taskmaganer.repository.UserRepository;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
+@Transactional
 public class TaskService {
+
     private final TaskRepository taskRepository;
+    private final UserRepository userRepository;
 
-    public TaskService(TaskRepository taskRepository) {
+    @Autowired
+    public TaskService(TaskRepository taskRepository, UserRepository userRepository) {
         this.taskRepository = taskRepository;
+        this.userRepository = userRepository;
     }
 
-    public List<TaskResponse> findAll() {
-        return this.taskRepository.findAll()
-                .stream()
+    public TaskResponse createTask(CreateTaskRequest request) {
+        UUID userId = UUID.fromString(request.getUserId());
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + request.getUserId()));
+
+        Task task = new Task();
+        task.setTitle(request.getTitle());
+        task.setDescription(request.getDescription());
+        task.setPriority(request.getPriority());
+        task.setStatus(request.getStatus());
+        task.setUser(user);
+        task.setIsActive(true);
+
+        Task savedTask = taskRepository.save(task);
+        return new TaskResponse(savedTask);
+    }
+
+    public TaskResponse getTaskById(UUID id) {
+        Task task = taskRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Task not found with id: " + id));
+        return new TaskResponse(task);
+    }
+
+    public List<TaskResponse> getAllTasks() {
+        return taskRepository.findAll().stream()
                 .map(TaskResponse::new)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public Task save(CreateTaskRequest request) {
-        return taskRepository.save(new Task(request.getTitle()));
+    public List<TaskResponse> getAllActiveTasks() {
+        return taskRepository.findAllActiveTasks().stream()
+                .map(TaskResponse::new)
+                .collect(Collectors.toList());
     }
 
-    public void delete(String id) {
-        UUID taskId = UUID.fromString(id);
-        taskRepository.deleteById(taskId);
+    public List<TaskResponse> getTasksByStatus(String status) {
+        return taskRepository.findByStatus(status).stream()
+                .map(TaskResponse::new)
+                .collect(Collectors.toList());
     }
 
-    public Task findById(String id) {
-        UUID taskId = UUID.fromString(id);
-        return taskRepository.findById(taskId).orElse(null);
+    public List<TaskResponse> getTasksByPriority(String priority) {
+        return taskRepository.findByPriority(priority).stream()
+                .map(TaskResponse::new)
+                .collect(Collectors.toList());
+    }
+
+    public List<TaskResponse> getActiveTasksByStatus(String status) {
+        return taskRepository.findAllActiveTasksByStatus(status).stream()
+                .map(TaskResponse::new)
+                .collect(Collectors.toList());
+    }
+
+    public List<TaskResponse> getActiveTasksByPriority(String priority) {
+        return taskRepository.findAllActiveTasksByPriority(priority).stream()
+                .map(TaskResponse::new)
+                .collect(Collectors.toList());
+    }
+
+    public List<TaskResponse> getTasksByUserId(UUID userId) {
+        if (!userRepository.existsById(userId)) {
+            throw new ResourceNotFoundException("User not found with id: " + userId);
+        }
+        return taskRepository.findByUserId(userId).stream()
+                .map(TaskResponse::new)
+                .collect(Collectors.toList());
+    }
+
+    public List<TaskResponse> getActiveTasksByUserId(UUID userId) {
+        if (!userRepository.existsById(userId)) {
+            throw new ResourceNotFoundException("User not found with id: " + userId);
+        }
+        return taskRepository.findActiveTasksByUserId(userId).stream()
+                .map(TaskResponse::new)
+                .collect(Collectors.toList());
+    }
+
+    public List<TaskResponse> getTasksByUserIdAndStatus(UUID userId, String status) {
+        if (!userRepository.existsById(userId)) {
+            throw new ResourceNotFoundException("User not found with id: " + userId);
+        }
+        return taskRepository.findByUserIdAndStatus(userId, status).stream()
+                .map(TaskResponse::new)
+                .collect(Collectors.toList());
+    }
+
+    public List<TaskResponse> getTasksByUserIdAndPriority(UUID userId, String priority) {
+        if (!userRepository.existsById(userId)) {
+            throw new ResourceNotFoundException("User not found with id: " + userId);
+        }
+        return taskRepository.findByUserIdAndPriority(userId, priority).stream()
+                .map(TaskResponse::new)
+                .collect(Collectors.toList());
+    }
+
+    public TaskResponse updateTask(UUID id, UpdateTaskRequest request) {
+        Task task = taskRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Task not found with id: " + id));
+
+        if (request.getTitle() != null) {
+            task.setTitle(request.getTitle());
+        }
+
+        if (request.getDescription() != null) {
+            task.setDescription(request.getDescription());
+        }
+
+        if (request.getPriority() != null) {
+            task.setPriority(request.getPriority());
+        }
+
+        if (request.getStatus() != null) {
+            task.setStatus(request.getStatus());
+        }
+
+        if (request.getIsActive() != null) {
+            task.setIsActive(request.getIsActive());
+        }
+
+        Task updatedTask = taskRepository.save(task);
+        return new TaskResponse(updatedTask);
+    }
+
+    public void deleteTask(UUID id) {
+        Task task = taskRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Task not found with id: " + id));
+
+        task.setIsActive(false);
+        taskRepository.save(task);
+    }
+
+    public void hardDeleteTask(UUID id) {
+        if (!taskRepository.existsById(id)) {
+            throw new ResourceNotFoundException("Task not found with id: " + id);
+        }
+        taskRepository.deleteById(id);
+    }
+
+    public boolean existsByTitle(String title) {
+        return taskRepository.existsByTitle(title);
     }
 }
